# Metodos_Num

./: Makefile  README.md  forprint.py  pyproject.toml  requirements.txt  trabalho1.ipynb  trabalho2.ipynb  trabalho3.ipynb  trabalho4.ipynb
2024.2/: README.md  trabalho1.ipynb  trabalho3.ipynb
2025.2/: trabalho1.ipynb  trabalho2.ipynb  trabalho3.ipynb
apoio/: 2.py
metodos/: __init__.py  runge_kutta.py
src/: 1.py  2.py  3.py  4.py
