[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "metodos_numericos"
version = "0.0.1"
description = "Metodos Num\u00e9ricos pa\u00f5es de Equa\u00e7\u00f5es Diferenciais"
authors = [
  { name = "ViniciusCMB" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["metodos_numericos"]
force_sort_within_sections = true
